--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,23 @@
   }
 }
 
+[class*="col-"] {
+    float: left;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -27,6 +44,735 @@
 .App-link {
   color: #61dafb;
 }
+
+.App {
+    text-align: center;
+}
+
+.App-logo {
+    height: 40vmin;
+    pointer-events: none;
+}
+
+.first-bg-image {
+    background-image: url(https://img.freepik.com/free-photo/shampoo-bottle-natural-ingredients-craft-background-blank-space-bottle_185193-16239.jpg?size=626&ext=jpg);
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.first-bg {
+    width: 100%;
+    height: 768px;
+    height: 93vh;
+    min-height: 900px;
+    position: relative;
+}
+
+.main-navigation {
+    position: absolute;
+    width: 100%;
+    z-index: 6;
+}
+
+.large-navigation-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    max-width: 1500px;
+    margin: auto;
+    position: relative;
+    font-family: 'FreightSansProMedium';
+    padding-top: 30px;
+}
+
+.large-navigation-bar a {
+    text-decoration: none;
+    letter-spacing: 4px;
+    font-size: 14px;
+    line-height: 25px;
+    color: #262929;
+}
+
+.nav-item {
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.nav-item-dropdown {
+    pointer-events: none;
+    display: inline-block;
+    width: 12px;
+}
+
+.logo {
+    font-family: flegrei, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px !important;
+    border-style: solid;
+    padding: 8px;
+}
+
+.first-bg-content-wrapper {
+    position: relative;
+    display: flex;
+    height: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.first-bg-section {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    position: relative;
+    top: 3rem;
+    padding: 24px;
+}
+
+.first-bg-section h1 {
+    margin: 0;
+}
+
+.first-bg-section-child {
+    width: 100%;
+}
+
+.hero-section-header {
+    font-size: 6rem;
+    line-height: 9rem;
+    white-space: nowrap;
+}
+
+.ui-type-header {
+    font-family: 'Whitman';
+    font-style: normal;
+    font-weight: 400;
+}
+
+.ui-type-header.type-h1 {
+    letter-spacing: 1px;
+}
+
+.divider {
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    border-bottom: 1px solid #4C5150;
+}
+
+.d-large {
+    display: block;
+}
+
+.first-bg-section .hero-section-subheader {
+    display: inline-block;
+    font-size: 17px;
+    line-height: 25px;
+    letter-spacing: 4px;
+    z-index: 1;
+    position: relative;
+    margin-top: 10px;
+    color: #4C5150;
+}
+
+.ui-type-subheader.type-h3 {
+    font-size: 1.7rem;
+    line-height: 2.5rem;
+    letter-spacing: 4px;
+}
+
+.ui-type-subheader {
+    font-family: 'Freight';
+    font-style: normal;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-variant-numeric: lining-nums;
+    -moz-font-feature-settings: "lnum";
+    -webkit-font-feature-settings: "lnum";
+    font-feature-settings: "lnum";
+}
+
+a.ui-btn-primary {
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+}
+
+.ui-btn-primary {
+    font-family: "Freight";
+    font-style: normal;
+    font-weight: 600;
+    -webkit-appearance: none;
+    border: 1px solid transparent;
+    padding: 1.3rem 1.5rem;
+    border-radius: 3px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    min-width: 150px;
+    transition-property: background-color;
+    transition-duration: 300ms;
+    transition-timing-function: ease;
+    cursor: pointer;
+    outline: none;
+}
+
+a {
+    background-color: transparent;
+}
+
+.hero-cta {
+    width: 100%;
+    max-width: 400px;
+    padding: 1.5rem;
+    background-color: #61C8B3;
+    color: #fff;
+    margin-top: 3rem;
+    margin-bottom: 6rem;
+    border: 1px solid transparent;
+    font-size: 18px;
+}
+
+.ui-btn-text-line {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: "Freight";
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: 2.5px;
+    border-bottom: 1px solid #262929;
+    color: #262929;
+}
+
+.atf-skin-cta {
+    margin-top: -40px;
+}
+
+.face-product-highlight {
+    background-repeat: repeat;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-image: url(https://i.pinimg.com/236x/8a/4d/71/8a4d71baf497f05dd9da009ef6514412--photo-editing.jpg);
+    height: 750px;
+}
+
+.container-col {
+    max-width: 50%;
+    flex: 0 1 50%;
+    height: 100%;
+}
+.product-images {
+    display: block;
+    position: relative;
+}
+
+.product-images .image-wrapper {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.product-images .desktop-skin-asset {
+    display: block;
+}
+
+.product-images img {
+    display: block;
+    position: absolute;
+    max-height: 70%;
+}
+
+.container-col {
+    max-width: 50%;
+    flex: 0 1 50%;
+    height: 100%;
+}
+
+.face-product-section {
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.face-product-section-content {
+    max-width: 50%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    text-align: left;
+    padding: 0;
+    flex-direction: column;
+    color: #262929;
+}
+
+.new-badge-wrapper {
+    display: block;
+    position: absolute;
+    right: 20px;
+    top: 27px;
+}
+
+.new-badge {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFF5B0;
+    border: 1px solid #262929;
+    color: #262929;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    font-family: 'Excellent';
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 41px;
+    line-height: 47px;
+    letter-spacing: 2px;
+}
+
+.highlight-header {
+    font-size: 54px;
+    line-height: 66px;
+    letter-spacing: 1.6px;
+    position: relative;
+    background: #D3F4EC;
+    font-weight: 400;
+    font-family: 'Excellent';
+    text-transform: uppercase;
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.ui-type-header.type-h3 {
+    font-size: 2.2rem;
+    line-height: 2.5rem;
+    letter-spacing: 1px;
+}
+
+.ui-type-header {
+    font-family: 'Whitman';
+    font-style: normal;
+    font-weight: 400;
+}
+
+.pt-2 {
+    padding-top: 2rem !important;
+}
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.face-product-section-content p {
+    padding: 30px 0;
+}
+
+.ui-type-paragraph {
+    font-size: 1.5rem;
+    line-height: 2.3rem;
+    letter-spacing: 0.75px;
+    font-family: 'Whitman';
+    font-style: normal;
+    font-weight: normal;
+}
+
+p {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.ui-btn-primary {
+    font-family: "Freight";
+    font-style: normal;
+    font-weight: 600;
+    -webkit-appearance: none;
+    border: 1px solid transparent;
+    padding: 1.3rem 1.5rem;
+    border-radius: 3px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    min-width: 150px;
+    transition-property: background-color;
+    transition-duration: 300ms;
+    transition-timing-function: ease;
+    cursor: pointer;
+    outline: none;
+}
+
+a.ui-btn-primary {
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+}
+
+.face-product-section-content .ui-btn-primary {
+    max-width: 350px;
+    text-align: center;
+    background-color: #E3F4F0;
+    border: 1px solid #262929;
+    color: #262929;
+    width: 100%;
+}
+
+.featured-products-section {
+    margin: 6rem auto 2rem;
+    max-width: 80%;
+    text-align: center;
+}
+
+body {
+    font-family: "Whitman";
+    font-style: normal;
+    font-weight: 500;
+    font-variant-numeric: lining-nums;
+    -moz-font-feature-settings: "lnum";
+    -webkit-font-feature-settings: "lnum";
+    font-feature-settings: "lnum";
+    letter-spacing: .75px;
+    font-size: 1.6rem;
+}
+
+.ui-type-header.type-h2 {
+    font-size: 3.2rem;
+    line-height: 1.8rem;
+    letter-spacing: 1px;
+}
+
+.ui-type-header {
+    font-family: 'Whitman';
+    font-style: normal;
+    font-weight: 400;
+}
+
+.featured-products-subheader {
+    color: #878E8D;
+}
+
+.type--5 {
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+    letter-spacing: .75px;
+}
+
+.mt-1 {
+    margin-top: 1rem !important;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.carousel-wrapper {
+    padding: 0 2rem;
+    overflow: hidden;
+    max-width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.slick-dotted.slick-slider {
+    margin-bottom: 30px;
+}
+
+.slick-slider {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.previous-arrow {
+    left: -3rem;
+}
+
+.arrow {
+    width: 100%;
+    max-width: 50px;
+    position: absolute;
+    bottom: 54%;
+    z-index: 1;
+}
+
+.slick-slider .slick-track, .slick-slider .slick-list {
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slick-list {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+.slick-track {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.slick-initialized .slick-slide {
+    display: block;
+}
+
+.featured-product {
+    padding: 0 2rem;
+}
+
+.slick-slide {
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+
+.featured-product-img {
+    max-width: 300px;
+    margin: 4rem auto;
+}
+
+.inline-style-slide {
+    opacity: 1;
+    width: 7452px;
+    transform: translate3d(-972px, 0px, 0px);
+}
+
+.carousel-single-image {
+    max-width: 325px;
+}
+
+.inline-style-figure {
+    width: 324px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.featured-product-title {
+    margin: 20px 0;
+}
+
+.type--4 {
+    font-size: 2.6rem;
+    line-height: 3.1rem;
+    letter-spacing: 1px;
+}
+
+.featured-product-short-desc {
+    color: #878E8D;
+}
+
+.type--6 {
+    font-size: 1.6rem;
+    line-height: 2.3rem;
+    letter-spacing: .5px;
+}
+
+.featured-product-cta-link {
+    color: #F48594;
+    border-bottom: 1px solid #F48594;
+    margin-top: 2rem;
+}
+
+.ui-btn-text-line {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: "Freight";
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: 2.5px;
+    border-bottom: 1px solid #262929;
+    color: #262929;
+}
+
+.featured-reviews {
+    flex-direction: row;
+    display: flex;
+    padding: 5rem 2rem;
+    margin-top: 17rem;
+    background-color: #FDE0A4;
+    position: relative;
+    margin: 4rem 0 2rem 0;
+}
+
+.featured-reviews__left {
+    width: 50%;
+    position: relative;
+    max-height: 340px;
+}
+
+.bottle-spill {
+    max-width: 100%;
+    width: 95%;
+    right: 9%;
+    position: relative;
+}
+
+.inline-style-review-image {
+    max-width: 559px;
+    height: 1100px;
+    z-index: 3;
+}
+
+.featured-reviews__right {
+    width: 50%;
+    color: #F48594;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    position: relative;
+    z-index: 1;
+    text-align: center;
+}
+
+.star-rating {
+    font-size: 2.4rem;
+    letter-spacing: 1rem;
+    margin-bottom: 1.3rem;
+}
+
+.ui-type-header.type-h2 {
+    font-size: 3.2rem;
+    line-height: 1.8rem;
+    letter-spacing: 1px;
+}
+
+.reviews-header {
+    color: #4C5150;
+}
+
+.ui-type-header {
+    font-family: 'Whitman';
+    font-style: normal;
+    font-weight: 400;
+}
+
+.ui-type-header.type-h5 {
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+    letter-spacing: 0.75px;
+}
+
+.reviews-subheader {
+    padding-top: 0.8rem;
+    padding-bottom: 1.3rem;
+}
+
+h4 {
+    display: block;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+a.ui-btn-primary {
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+}
+
+a.ui-btn-primary {
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+}
+
+.reviews-cta {
+    background-color: #F48594;
+    font-size: 1rem;
+    color: #fff;
+    max-width: 100%;
+    width: 400px;
+    margin-top: 1rem;
+}
+
+.ui-btn-primary {
+    font-family: "Freight";
+    font-style: normal;
+    font-weight: 100;
+    -webkit-appearance: none;
+    border: 1px solid transparent;
+    padding: 1.3rem 1.5rem;
+    border-radius: 3px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    min-width: 150px;
+    transition-property: background-color;
+    transition-duration: 300ms;
+    transition-timing-function: ease;
+    cursor: pointer;
+    outline: none;
+}
+
+@keyframes App-logo-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+
+
 
 @keyframes App-logo-spin {
   from {
